# xsmb-ml-system

./: .env.example  .gitignore  AGENTS.md  BACKTEST_SPEC.md  DATA_CONTRACT.md  MODEL_SPEC.md  PROJECT_SPEC.md  README.md  docker-compose.yml  pyproject.toml
Prompts/: CODEX_MASTER_CODING_PROMPT_XSMB.md  MASTER_PROMPT_XSMB_PLAN_FIRST.md
app/: __init__.py  main.py
plans/: CODING_PROGRESS.md
plans/2026-05-14-xsmb-plan-first/: 00_REPO_AUDIT.md  01_DOMAIN_XSMB_DEFINITIONS.md  02_PRODUCT_REQUIREMENTS.md  03_DATA_CONTRACT_V2.md  04_DATABASE_SCHEMA_PLAN.md  05_SCRAPING_AND_INGESTION_PLAN.md  06_PROCESSING_AND_VALIDATION_PLAN.md  07_TARGET_AND_FEATURE_PLAN.md  08_MODELING_PLAN.md  09_BACKTEST_AND_METRICS_PLAN.md  10_CLI_API_DASHBOARD_PLAN.md  11_TESTING_QA_PLAN.md  12_IMPLEMENTATION_ROADMAP.md  13_RISK_REGISTER.md  14_DEFINITION_OF_DONE.md  15_AGENT_CODING_PROMPTS.md
tests/: conftest.py  test_api.py  test_backtest.py  test_cli.py  test_crawler.py  test_dashboard.py  test_database_connection.py  test_database_models.py  test_database_repository.py  test_features.py  test_ingestion.py  test_ml_train_predict.py  test_normalize.py  test_parser.py  test_transform.py  test_validate.py
tests/fixtures/: xsmb_sample_result.html
xsmb/: config.py
xsmb/api/: __init__.py  routes.py  schemas.py
xsmb/dashboard/: __init__.py  streamlit_app.py
xsmb/database/: __init__.py  connection.py  models.py  repository.py  schema.sql
xsmb/features/: build_dataset.py  frequency_features.py  gap_features.py  rolling_features.py
xsmb/models/: __init__.py  backtest.py  baseline.py  predict.py  (+2 more)
(+8 files in other folders)
